<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable
      name="viewModel"
      type="com.notgov.rebootcocoa.viewmodels.SettingsViewModel" />
    <import type="android.view.View" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_overview_title"
      android:textSize="28sp" />
    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_overview_description" />
    <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_howto_title"
      android:textSize="28sp" />
    <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_howto_description" />
    <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/main_settings_title"
      android:textSize="28sp" />
    <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:labelFor="@id/textTimeNotify"
      android:text="@string/main_settings_time_title" />
    <EditText
      android:id="@+id/textTimeNotify"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:autofillHints=""
      android:inputType="time"
      android:text="@={viewModel.viewBoundSettings.notificationTimeText}" />
    <RadioGroup
      android:id="@+id/radioGroupSettingsMode"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:checkedButton="@={viewModel.viewBoundSettings.radioGroupNotificationModeCheckedButton}">
      <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_settings_mode" />
      <RadioButton
        android:id="@+id/radioModeNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_settings_mode_normal" />
      <RadioButton
        android:id="@+id/radioModeBeast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_settings_mode_beast" />
    </RadioGroup>

    <!-- The "Save" and "Cancel" buttons. Only shown if the current input values are different from what's stored. -->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="@{viewModel.sameAsStored ? View.GONE : View.VISIBLE}">
      <!-- The "Save" button, only clickable if the current input is valid. -->
      <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:enabled="@{viewModel.inputValid}"
        android:onClick="@{() -> viewModel.onSave()}"
        android:text="@string/main_settings_save" />
      <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="@{() -> viewModel.onCancel()}"
        android:text="@string/main_settings_cancel" />
    </LinearLayout>
  </LinearLayout>
</layout>